--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 <body>
 	<header>
+		<div class="hamburger">
+				<div class="bar1"></div>
+				<div class="bar2"></div>
+				<div class="bar3"></div>
+		</div>
 		<nav class="mainNav">
-			<ul>
+			<ul class="mainNavUl">
 				<li><a href="#">Homepage</a></li>
 				<li><a href="#">About Us</a></li>
 				<li><a href="#">Services</a></li>
@@ -22,8 +27,19 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="titleImgContainer">
-	</div>
-
+	<div class="container">
+		<div class="titleImgContainer">
+			<h1>Triumph</h1>
+			<h2>Responsive Template By Jorge Goris</h2>
+		</div>
+		<div class="content">
+			<p>Content will go here.</p>
+			<br>
+			<br>
+			<p>Another holop.</p>
+		</div>
+	</div><!--end container-->
+<!----------Custom Script---------------->
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
