Added a three column layout that is mobile responsive.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,37 @@
 			<h1>Triumph</h1>
 			<h2>Responsive Template By Jorge Goris</h2>
 		</div>
-		<div class="content">
-			<p>Content will go here.</p>
-			<br>
-			<br>
-			<p>Another holop.</p>
+		<div class="about-us-section">
+			<div class="card">
+				<img src="images/card1.jpg" alt="card 1 image">
+				<div class="cardText">
+					<h4 class="card1Title">Built From Scratch!</h4>
+					<p>Built with love and attention to detail. This template was created based on another template that was created using Bootstrap. I tried recreating it using no frameworks and anything I didn't know I looked up and applied!</p>
+					<div class="btn-div">
+						<a href="#" class="green-btn">Green Button</a>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<img src="images/card2.jpg" alt="card 2 image">
+				<div class="cardText">
+					<h4 class="card2Title">Responsive Design</h4>
+					<p>Responsive design is pretty much a standard nowadays and everything must be mobile friendly. You can rest assured knowing that I built this template and took mobile into consideration. Creating this template also allowed me to get down and dirty with my Flexbox skills which I had been neglecting for a bit.</p>
+					<div class="btn-div">
+						<a href="#" class="blue-btn">Blue Button</a>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<img src="images/card3.jpg" alt="card 3 image">
+				<div class="cardText">
+					<h4 class="card3Title">Fun Layout</h4>
+					<p>It had been a while since I built a page from the ground up since I have been messing around with JavaScript a lot. Building this has given me the confidence in knowing that I did not completely forget how to build a webpage and I can always come back and do so if the need arises.</p>
+					<div class="btn-div">
+						<a href="#" class="red-btn">Red Button</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div><!--end container-->
 <!----------Custom Script---------------->
