Finished the about me section by adding another row with two columns. Also made it responsive.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JG-Triumph Template</title>
+	<title>JG-Fall Template</title>
 	<!--Meta Tags-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
 		<nav class="mainNav">
 			<ul class="mainNavUl">
 				<li><a href="#">Homepage</a></li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="#">About Me</a></li>
 				<li><a href="#">Services</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
@@ -29,7 +29,7 @@
 	</header>
 	<div class="container">
 		<div class="titleImgContainer">
-			<h1>Triumph</h1>
+			<h1>Fall</h1>
 			<h2>Responsive Template By Jorge Goris</h2>
 		</div>
 		<div class="about-us-section">
@@ -63,6 +63,37 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="card">
+					<img src="images/card4.jpg" alt="card 4 image">
+					<div class="biggerCardText">
+						<h2 class="biggerCardTitle">Two Column Left Side</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+				<div class="card">
+					<img src="images/card5.jpg" alt="card 5 image">
+					<div class="biggerCardText">
+						<h2 class="biggerCardTitle">Two Column Right Side</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class="biggerCardBtnDiv">
+							<a href="#" class="biggerCardBtn">Read More</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="services-section">
 		</div>
 	</div><!--end container-->
 <!----------Custom Script---------------->
