Fixed up the services section by making everything responsive friendly.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,59 @@
 				</div>
 			</div>
 		</div>
+		<div class="services-banner-img">
+				<h2>My Services</h2>
+			</div>
 		<div class="services-section">
-		</div>
+			<div class="services">
+				<div class="card">
+					<img src="images/card6.jpg" alt="card 6 image">
+					<div class="cardText">
+						<h4 class="biggerCardTitle">Column 1</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="card">
+					<img src="images/card7.jpg" alt="card 7 image">
+					<div class="cardText">
+						<h4 class="biggerCardTitle">Column 2</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="card">
+					<img src="images/card8.jpg" alt="card 8 image">
+					<div class="cardText">
+						<h4 class="biggerCardTitle">Column 3</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+				<div class="card">
+					<img src="images/card9.jpg" alt="card 9 image">
+					<div class="cardText">
+						<h4 class="biggerCardTitle">Column 4</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.</p>
+					</div>
+				</div>
+			</div><!-- end services-->
+			<div class="row">
+					<div class="card biggestCard">
+						<img src="images/largecard.jpg" alt="image for the largest card.">
+						<div class="cardText">
+							<h4 class="biggerCardTitle">Biggest Column</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut sollicitudin pharetra imperdiet. Maecenas ex sem, elementum vitae augue at, efficitur tempus tortor. Curabitur imperdiet eget est et tristique. Fusce aliquam commodo dui id congue. Etiam malesuada consequat lacus, sit amet molestie ex aliquam quis. Pellentesque odio massa, mollis vel convallis lobortis, malesuada eu eros. Pellentesque tincidunt interdum magna sit amet viverra. Fusce consectetur tellus non elit mollis rhoncus</p>
+						</div>
+					</div>
+				</div>
+		</div><!--end services section-->
 	</div><!--end container-->
 <!----------Custom Script---------------->
 <script type="text/javascript" src="script.js"></script>
