--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
 					</div>
 				</div>
 		</div><!--end services section-->
+		<div class="contact-form">
+			<h2>Contact Us!</h2>
+			<div class="contact-content">
+				<p class="contact-p">Have a suggestion? Want to get in contact with us? Drop your information below and we will respond as soon as possible.</p>
+			</div>
+		</div><!--end contact form-->
 	</div><!--end container-->
 <!----------Custom Script---------------->
 <script type="text/javascript" src="script.js"></script>
