Added contact form and footer as well as some media queries so the page looks good on specific devices. Building this page was a lot of fun! Time to learn CSS grid next.

--- a/index.html
+++ b/index.html
@@ -148,10 +148,28 @@
 		</div><!--end services section-->
 		<div class="contact-form">
 			<h2>Contact Us!</h2>
-			<div class="contact-content">
+			<div class="contact-content-p">
 				<p class="contact-p">Have a suggestion? Want to get in contact with us? Drop your information below and we will respond as soon as possible.</p>
 			</div>
+			<div class="contact-content-form">
+				<form class="contact">
+					<input type="text" name="name" placeholder="Name">
+					<br>
+					<input type="email" name="Email" placeholder="Email">
+					<br>
+					<input type="text" name="subject" placeholder="Subject">
+					<br>
+				</form>
+				<textarea rows="6" class="textarea" placeholder="Your message here."></textarea>
+			</div>
+			<input type="submit" name="submit" class="submit-btn" value="Send">
 		</div><!--end contact form-->
+		<footer>
+			<h3>Created with love.</h3>
+			<p>Based on a Template I saw online, This template was created to practice my front-end capabilities. Specifically Flexbox and responsive design.</p>
+			<hr>
+			<p class="copyright">Copyright &copy; Jorge Goris 2018</p>
+		</footer>
 	</div><!--end container-->
 <!----------Custom Script---------------->
 <script type="text/javascript" src="script.js"></script>
